--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgb(162, 237, 250)), to(#a07ce7)) fixed; 
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(206, 206, 206)), to(#ff00a2d9)) fixed; 
     margin-bottom: 30px;
     /* background: url("../img/backimg.png") no-repeat center center fixed; */
     /* background-color: rgb(34,39,45); */
