--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ hr {
 }
 
 .logo {
-  color: rgb(255, 0, 251);
+  color: rgb(10, 63, 94);
 }
 
 .pgtitle {
@@ -99,7 +99,7 @@ select::-ms-expand {
     transform:translate(-50%,-50%);
     width:100%;
     height:15px;
-    background:#0d00ff;
+    background:#8b85ff;
     overflow:hidden;
   }
 
