Add cookies warning and update background color
Add cookies warning and update background color do animated palete

--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,26 @@
 body {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgb(206, 206, 206)), to(#041930d9)) fixed;
   margin-bottom: 30px;
-  /* background: url("../img/backimg.png") no-repeat center center fixed; */
-  /* background-color: rgb(34,39,45); */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background: linear-gradient(-45deg, #5279ee, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 html {
