--- a/style/style.css
+++ b/style/style.css
@@ -1,182 +1,17 @@
-body {
-  margin-bottom: 30px;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background: linear-gradient(-45deg, #5279ee, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
+body,
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
-.blured {
-  margin-left: .1em;
-  backdrop-filter: blur(3em);
-  height: 10em;
-  /* background-color: rgba(0,0,0,0.1); */
-}
+.bg {
+  /* The image used */
+  background-image: url("../img/backmack.jpeg");
 
-h3 {
-  /* color: rgb(210, 210, 210); */
-  color: rgb(0, 0, 0);
-  font-family: monospace;
-}
+  /* Full height */
+  height: 100%;
 
-hr {
-  color: green;
-}
-
-#loader {
-  display: none;
-  position: fixed;
-  width: 100%;
-}
-
-.logo {
-  color: #041930d9;
-}
-
-.pgtitle {
-  color: rgb(0, 0, 0);
-  font-family: monospace;
-  padding-left: 20px;
-}
-
-.loaderImg {
-  width: 100%;
-  height: 30px;
-}
-
-select {
-  width: 93%;
-  padding: 5px 35px 5px 5px;
-  font-size: 18px;
-  border: 2px solid rgb(160, 0, 0);
-  border-radius: 0.5em;
-  height: 44px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: var(--icone) 98% / 7% no-repeat rgb(255, 255, 255);
-}
-
-.select-turno {
-  --icone: url("../img/clock.png");
-}
-
-.select-disctipo {
-  --icone: url("../img/signpost.png");
-}
-
-.select-disciplina {
-  --icone: url("../img/classe.png");
-}
-
-select:disabled {
-  background-color: rgb(130, 130, 130);
-  background: rgb(172, 172, 172);
-}
-
-select:hover {
-  border: 2px solid rgb(255, 255, 255);
-}
-
-select::-ms-expand {
-  display: none;
-  /* Remove default arrow in Internet Explorer 10 and 11 */
-}
-
-/* Target Internet Explorer 9 to undo the custom arrow */
-@media screen and (min-width:0\0) {
-  select {
-    background: none\9;
-    padding: 5px\9;
-  }
-}
-
-/* Progress bar, from https://codepen.io/inertia/pen/oeQKXW*/
-.bar {
-  position: fixed;
-  top: 0%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 15px;
-  background: #8b85ff;
-  overflow: hidden;
-}
-
-.bar div:before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  background: #616161;
-  animation: box-1 2100ms cubic-bezier(0.65, 0.81, 0.73, 0.4) infinite;
-}
-
-.bar div:after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  background: lightgreen;
-  animation: box-2 2100ms cubic-bezier(0.16, 0.84, 0.44, 1) infinite;
-  animation-delay: 1150ms;
-}
-
-@keyframes box-1 {
-  0% {
-    left: -35%;
-    right: 100%;
-  }
-
-  60%,
-  100% {
-    left: 100%;
-    right: -90%;
-  }
-}
-
-@keyframes box-2 {
-  0% {
-    left: -200%;
-    right: 100%;
-  }
-
-  60%,
-  100% {
-    left: 107%;
-    right: -8%;
-  }
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
-  line-height: 30px;
-  --background-color: rgb(228, 22, 217);
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
