--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,11 @@ body, html {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgb(146, 20, 20);
+  background-color: rgb(200, 30, 30);
   color: white;
   text-align: center;
+}
+
+.dlcButton, dlcButton:hover {
+  background: orange !important;
 }
