assets reorganization. new index background

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 body,
 html {
   height: 100%;
-  background-image: url("../img/backmack.jpeg");
+  background-image: url("../assets/backmack.jpeg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
